<resources>
    <string name="app_name">HAREC Proefexamen</string>
    <string name="hello_world"><![CDATA[
        <h2>About this software</h2>
        <p><font style="font-weight: bold" size="+2">Programėlę parengė ir išleido 
        Lietuvos radijo mėgėjų draugija - <a href="http://www.lrmd.lt/">www.lrmd.lt</a></font></p>
        
        <p><font style="font-weight: bold" size="+1">Programėlės autorius - Simonas Kareiva LY2EN 
        &lt;<a href="mailto:ly2en@qrz.lt">ly2en@qrz.lt</a>&gt;</font></p>

        <p><font style="font-weight: bold" size="+1">Daugiau informacijos apie mėgėjišką radiją taip pat galite rasti  
        <a href="http://www.hamradio.lt/">www.hamradio.lt</a></font></p>
        
        <h2>Apie mėgėjišką radiją</h2>
        <p><i>"Jūs žinote, telegrafas yra panašus į ilgą, labai ilgą katę. Jūs patraukiate katės uodegą Niujorke, o katės galva Los Andžele sukniaukia. Ar jūs tai supratote? Radijas veikia lygiai taip pat: jūs siunčiate signalus čia, jie priima juos ten. Vienintelis skirtumas yra tai, kad nėra katės..." - A. Einšteinas </i></p>
        <p>Taigi, mūsų geriausiame iš geriausiųjų pasaulyje šiuo metu "katės uodegą" tampo net trys milijonai entuziastų, ir visa tai tik vardant pramogos - jokio materialaus atlyginimo. Tai ir yra "mėgėjiškas radijas", arba "radijo mėgėjai", dar kitaip vadinami trumpabangininkais. Anglakalbėse šalyse jie oficialiai vadinami "radio amateurs", o šnekamojoje kalboje labiau paplitęs terminas "radio hams". Mėgėjiškas radijas vadinamas atitinkamai "amateur radio" ir "ham radio".</p>
        <p>Lietuvių kalbos žodžiai "mėgėjiškas", "mėgėjas", deja, turi šiek tiek pašiepiančią, ar net neigiamą prasmę. Manyčiau, kad čia yra mūsų kalbininkų profesionalų ir kalbos puoselėtojų-mėgėjų veiklos spraga... Taip jau yra, kad skirtumas tarp radijo mėgėjo ir radijo profesionalo realiame gyvenime dažnai yra toks, koks yra skirtumas tarp boksininko profesionalo (kartais - Europos ar pasaulio čempiono) ir gatvės "boksininko". Taigi, atitinkamai radijo mėgėjus su radiju riša meilė, o radijo profesionalus - pinigai. Pabaigoje belieka pridėti, kad gan dažnai sutinkami ir "hibridai" - radijo mėgėjai, turintys profesionalų radiotechninį išsilavinimą. Sunku pasakyti, kuris pradas tada dominuoja dažniau, tačiau kalbėkime apie mėgėjus...</p>
        <p>Radijo mėgėjai vienas kitą atpažįsta pagal jiems suteiktus šaukinius. Viena šaukinio dalis (kaip taisyklė - šaukinio pradžioje) yra bendra, pagal ją galima nustatyti, kokioje šalyje yra mėgėjo radijo stotis, antroji šaukinio dalis yra individuali kiekvienam radijo mėgėjui, sakytume, radijo mėgėjo "pavardė". Lietuvos radijo mėgėjų šaukiniai prasideda raidėmis "LY". Šios dvi Lietuvai priskirtosios raidės yra naudojamos ne tik radijo mėgėjų - tas pačias raides matome ir ant Lietuvai priklausančių lėktuvų, jachtų.</p>
        <p>Radijo mėgėjų klanui priklauso daug garsių ir įtakingų planetos veikėjų - karalių ir jų karališkųjų šeimų narių, prezidentų, kosmoso didvyrių, garsių mokslininkų, politikų, Holivudo "žvaigždžių"... Mėgėjiškas radijas vargu ar atrodytų toks, kaip dabar, jei ne šių įtakingųjų parama ir lobistinė veikla.</p>
        <p>Radijo mėgėjai turi savo "tarnybą" (amateur radio service), kuri visuose (tiek nacionaliniuose, tiek tarptautiniuose) radiją liečiančiuose įstatymuose ar dokumentuose turi statusą, lygiavertį keliolikos kitų tarnybų (tokių, kaip radiofonija, televizija, radiolokacija, aviacija, jūriniai ar kosminiai ryšiai ir kt.) statusams.</p>
        <p>Radijo mėgėjų stotys veikia Amazonės džiunglėse ir Antarktidos mokslinėse bazėse, kosminėse stotyse ir JAV lėktuvnešiuose, žemės drebėjimų nusiaubtose gyvenvietėse ir "karštuose" planetos taškuose (Vietnamo karas, Balkanų krizė), radijo mėgėjų signalai sklinda iš didmiesčių dangoraižių ir iš vienišų jachtų, keliaujančių aplink pasaulį. Į jūsų kvietimą ryšiui gali atsiliepti radijo mėgėjas iš bet kurio pasaulio kampelio - JAV, Japonijos, Bangladešo, nuo bangų skalaujamo rifo Ramiajame vandenyne, ar ... kaimynas iš tos pačios gatvės.</p>
        <p>Ir vis tik, kas yra tas mėgėjiškas radijas, kokios jo "varančiosios jėgos"? Visų pirma, mėgėjiškas radijas yra prieinamas visiems - kuria nors iš savo formų. Visi sėdintys prie mikrofono, ar telegrafo rakto yra lygūs - nepriklausomai nuo jų rasės, religijos, turto, kilmės, amžiaus, išsilavinimo.</p>
        <p>Radijas išplečia žmogaus galimybes - jis mato ir girdi ne tik toliau ir daugiau už "neapsiginklavusį" žmogų, bet ir gali stulbinančiai išplėsti savo natūraliųjų galių diapazoną - reaguoti, analizuoti ir suprasti elektromagnetinius (ir ne tik!) virpesius nuo "infra" iki "ultra" dažnumų! Tai, be abejo, vilioja žmones mėgstančius tyrinėti aplinką, turinčius potraukį į mokslo studijas.</p>
        <p>Sau tinkamą saviraiškos formą gali surasti visi - "sportininkai" (ar šiaip agresyvūs ;)) dalyvauja varžybose, "pedantai" - renka retas šalis, egzotiškus ryšius, klijuoja savo sienas kortelėmis ar diplomais už įvairiausius pasiekimus, "meškeriotojai" - įsijungia savo stotis ir gaudo "žuvis" - atsitiktines ar konkrečias, dideles ir retas, ar vien mažas (bet daug). Plepiai, ar savo aplinkoje nerandantys partnerio pokalbiams - susiranda į save panašų ir maloniai leidžia laiką. Jei dar pridėsime tuos, kuriuos ryšiai domina tik tiek, kiek jie tinka naujai sukonstruoto savadarbio aparato išbandymui, susidarysime apytikrį statistinio radijo mėgėjo vaizdą.</p>
      
    ]]>
    </string>
    <string name="menu_settings">Instellingen</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_about">About Quizzes</string>
    <string name="title_activity_complete">CompleteActivity</string>
    <string name="menu_about">Kennisgeving</string>
    <string name="start_quiz_label">Begin het examen</string>
    <string name="choose_category">Kies alstublieft de categorie</string>
    <string name="title_activity_categories">Kies alstublieft de categorie</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="setting_sound_label">Garsas</string>
	<string name="loading_progress_message">Database laden</string>
	<string name="loading_progress_title">Kuriame duomenų bazę</string>
	<string name="header_image_content_description">uba.be</string>
	<string name="header_title">Amateur radio examen</string>
	<string name="header_text">Powered by YOTA team: www.ham-yota.com</string>
	<string name="default_content_description">Not Important</string>
	<string name="show_answer">Toon het antwoord</string>
	<string name="show_question">Toon vraag</string>
	<string name="next">Volgende</string>
	<string name="back">Terug</string>
	<string name="next_question">Volgende vraag</string>
	<string name="progress_template">Vraag ^1 iš ^2</string>
	<string name="score_template">Vraag ^1 van ^2 (%^3)</string>
	<string name="sound_warning">This question has sound, but your volume is set to mute.</string>
	 
	<string name="try_again">Probeer opnieuw</string>
	<string name="home">Home</string>
	<string name="complete">Proef beëindigd</string>
	<string name="complete_high_score">Dit is je beste resultaat!</string>
	<string name="complete_score_format">Je hebt %1$d van de %2$d vragen goed beantwoord (%3$d%%).</string>
	
	
	<string name="button_text">Open PDF file</string>
	<string name="paaiskinimai">Verklaringen en documenten</string>
	
	<string name="istatymai">Ethiek en operationele procedures</string>
	<string name="santrupos">[ Santrupos ]</string>
	<string name="atstojamosios">[ Atstojamosios ]</string>
	
</resources>